added the cocoon gem and updated the styles

--- a/app/assets/stylesheets/recipes.scss
+++ b/app/assets/stylesheets/recipes.scss
@@ -1,3 +1,22 @@
 // Place all the styles related to the Recipes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.create-recipe-align{
+  margin-left: 250px;
+}
+
+.show-title-style {
+  font-family: monospace;
+  font-size: 30px;
+}
+
+.show-description-style {
+font-family: -webkit-pictograph;
+font-size: 25px;
+}
+
+.show-items-style {
+  font-family: -webkit-pictograph;
+  font-size: 18px;
+}
