--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,3 +15,9 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+.grow { transition: all .2s ease-in-out; }
+.grow:hover {
+  transform: scale(1.1);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
