--- a/app/views/recipes/_form.html.haml
+++ b/app/views/recipes/_form.html.haml
@@ -1,4 +1,34 @@
 = simple_form_for @recipe, html: {multipart: true} do |f|
-  = f.input :title
-  = f.input :description
-  =f.submit
+  .form-group
+    .row
+      .col-md-8
+        = f.text_field :title, class: 'form-control',placeholder: 'enter title'
+  .form-group
+    .row
+      .col-md-8 
+        = f.text_area :description, class: 'form-control', placeholder: 'enter Description'
+  .form-group
+    .row
+      .col-md-8 
+        = f.file_field :image, class: 'form-control'
+  .row
+    .col-md-6
+      %h3 Ingredients
+      #ingredients
+        = f.simple_fields_for :ingredients do |ingredient|
+          = render 'ingredient_fields', f: ingredient
+        .links
+          = link_to_add_association 'Add Ingredient', f, :ingredients, class: "btn btn-default"
+    .col-md-6
+      %h3 Directions
+      #Directions
+        = f.simple_fields_for :directions do |direction|
+          = render 'direction_fields', f: direction
+        .links
+          = link_to_add_association 'Add direction', f, :directions, class: ' btn btn-default'
+  .form-group
+    .row
+      .col-md-12
+        = f.submit class: 'btn btn-primary create-recipe-align'
+
+
