--- a/app/views/recipes/new.html.haml
+++ b/app/views/recipes/new.html.haml
@@ -1,3 +1,7 @@
-%h3 new page
-= render 'form'
-= link_to 'back', root_path
+.row
+  .col-md-12
+    .col-md-10
+      = render 'form'
+.row
+  .col-md-12
+    = link_to 'back', root_path, class: 'btn btn-default'
